docs(harfbuzz): document the kffi-harfbuzz module